--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
-  background-image: url('./assets/images/background.jpg');
+  /* background-image: url('./assets/images/background.jpg'); */
+  background-color: rgba(0, 0, 0, 0.87);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
