--- a/src/components/TodoItem/TodoItem.css
+++ b/src/components/TodoItem/TodoItem.css
@@ -1,5 +1,6 @@
 
 .TodoItem {
+  border: 3px solid #61DAFA;
   background-color:#fafafa;
   position:relative;
   display:flex;
@@ -13,7 +14,8 @@
   width:calc(100% - 120px);
   font-size:18px;
   line-height:24px;
-  font-weight:400
+  font-weight:600;
+  font-family: 'Courier New', Courier, monospace;
 }
 .TodoItem-p--complete {
   text-decoration:line-through
@@ -25,7 +27,7 @@
   align-items:center;
   height:48px;
   width:48px;
-  font-size:24px;
+  font-size:30px;
   font-weight:700
 }
 .Icon-check {
@@ -35,7 +37,12 @@
 .Icon-check--active {
   color:#4caf50
 }
+.Icon-check:hover {
+  color: #4caf50;
+}
 .Icon-delete {
+  border-radius: 20px;
+  background-color: white;
   position:absolute;
   top:-24px;
   right:0
